<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tambah_TambahanActivity">

    <TextView
        android:id="@+id/tvtambahanjudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambahtambahan"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvtambahannama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/namatambahan"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtambahanjudul"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/ettambahannama"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/etnamatambahan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtambahannama"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvtambahanharga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/harga"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ettambahannama"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/ettambahanharga"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/etharga"
        android:maxLength="14"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtambahanharga"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvtambahancabang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/card_cabang"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ettambahanharga"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/ettambahancabang"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/namaCabang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtambahancabang"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bttambahansimpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_simpan"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ettambahancabang"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>