<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    android:id="@+id/card_pilih_layanan"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#9EB8AB"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="1"
            android:textColor="#212121"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvCARD_PIlih_layanan_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Idlayanan"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tvCARD_Pilih_Layanan_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namalayanan"
                android:textSize="14sp"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:id="@+id/tvCARD_Pilih_Layanan_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:textSize="14sp"
                android:layout_marginBottom="2dp"/>


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>