<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cvCARD_TAMBAHAN"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="8dp"
    android:layout_marginTop="12dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    card_view:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/light_blue_dark"
            android:paddingVertical="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:text="@string/ID_Tambahan"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCARD_TAMBAHAN_ID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                tools:text="T001"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/namatambahan"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/grey_text_dark"/>

                <TextView
                    android:id="@+id/tvCARD_TAMBAHAN_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Pewangi Wangi"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/green_success"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harga"
                    android:textSize="15sp"
                    android:textColor="@color/grey_text_dark"/>

                <TextView
                    android:id="@+id/tvCARD_TAMBAHAN_harga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Rp. 5.000"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/blue_status"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_cabang"
                    android:textSize="15sp"
                    android:textColor="@color/grey_text_dark"/>

                <TextView
                    android:id="@+id/tvCARD_TAMBAHAN_cabang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Solo"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/grey_text_dark"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>